<resources>
    <string name="app_name">Secret Reichstag</string>

    <string name="main_menu_new_room">New Room</string>
    <string name="main_menu_join_room">Join Room</string>
    <string name="main_menu_rejoin_room">Rejoin Room</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_icon_description">Secret Reichstag</string>
    <string name="main_menu_credits">Credits</string>

    <string name="room_settings_title">Room Settings</string>
    <string name="room_settings_room_name_label">Room Name</string>
    <string name="room_settings_room_name_hint">Room Name</string>
    <string name="room_settings_game_mode_label">Game Mode</string>
    <string name="room_settings_create_room">Create Room</string>
    <string name="room_settings_advanced">Advanced Settings</string>

    <string name="advanced_title">Advanced Room Settings</string>
    <string name="advanced_actions_title">Actions</string>
    <string name="advanced_actions_customize">Customize Actions</string>
    <string name="advanced_actions_enable">Use custom board</string>
    <string name="advanced_cards_title">Cards</string>
    <string name="advanced_cards_label">%s Cards</string>
    <string name="advanced_cards_increase">+</string>
    <string name="advanced_cards_decrease">-</string>
    <string name="advanced_load_defaults">Load Defaults</string>
    <string name="advanced_confirm">Confirm</string>

    <string name="join_room_id_label">Room ID</string>
    <string name="join_room_id_hint">Room ID</string>
    <string name="join_room_confirm">Confirm</string>

    <string name="select_username_name_label">Username</string>
    <string name="select_username_name_hint">Username</string>
    <string name="select_username_confirm">Join Room</string>

    <string name="credits_label">Credits</string>
    <string name="credits_text">\"Secret Reichstag\" is a modified version of the game \"Secret Hitler\" by Goat, Wolf, &amp; Cabbage LLC\nAll credit for the original game goes to them\n<a href="https://secrethitler.com">Original Game Website</a>\n\nLicense: CC BY-NC-SA 4.0\n\nThere\'s also a <a href="https://sr.graphite-official.com/">web version</a> available for playing the game on your PC\n\nDeveloped by: <a href="https://github.com/MrLetsplay2003">MrLetsplay2003</a>\nSource Code: <a href="https://github.com/MrLetsplay2003/Secret-Reichstag-Android">GitHub</a>\n\nApp Icon: <a href="https://github.com/Endergame15">Endergame15</a>\nIn-game Icons: Palme11100\n\nSpecial thanks to:\nAkito123321\nBlobert\nTheArrayser\n\nSupported by <a href="https://graphite-official.com">Graphite</a></string>

    <string name="event_log_start">The event log starts here</string>
    <string name="chat">Chat</string>
    <string name="chat_send">Send</string>

    <string name="action_dialog_hide">Hide</string>

    <string name="vote_text1">proposes</string>
    <string name="vote_text2">to be the next chancellor</string>
    <string name="vote_yes">Vote Yes</string>
    <string name="vote_no">Vote No</string>

    <string name="draw_cards_title">You need to draw some cards</string>
    <string name="draw_cards_confirm">Draw Cards</string>

    <string name="pick_cards_title">Select the card  you want to dismiss</string>
    <string name="pick_cards_card_description">Policy Card</string>
    <string name="pick_cards_confirm">Confirm</string>

    <string name="veto_text">is requesting a veto</string>
    <string name="veto_accept">Accept Veto</string>
    <string name="veto_decline">Decline Veto</string>

    <string name="winner_text1">The</string>
    <string name="winner_text2">have won the game</string>
    <string name="winner_okay">Okay</string>

    <string name="ingame_menu_game_not_running">Game not running</string>
    <string name="ingame_menu_room_id">Room ID: %1$s</string>

    <string name="game_layout_player_list">Players</string>
    <string name="game_layout_chat">Chat</string>
    <string name="game_layout_menu">Menu</string>

    <string name="card_active">card_active</string>
    <string name="card_index">card_index</string>

    <string name="settings_add_server">Add Server</string>
    <string name="settings_add_server_name">Server Name</string>
    <string name="settings_add_server_url">Server URL</string>
    <string name="settings_remove_server">Remove Server</string>

    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
</resources>