<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reichstag"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/germania_one_regular"
                android:gravity="center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/advanced_title"
                android:textColor="@color/text"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/germania_one_regular"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/advanced_actions_title"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/advanced_customize_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/reichstag"
                android:fontFamily="@font/germania_one_regular"
                android:text="@string/advanced_actions_customize"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/germania_one_regular"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/advanced_cards_title"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <include
                android:id="@+id/liberal_cards"
                layout="@layout/advanced_settings_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/fascist_cards"
                layout="@layout/advanced_settings_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/communist_cards"
                layout="@layout/advanced_settings_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/advanced_load_defaults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/reichstag"
                android:fontFamily="@font/germania_one_regular"
                android:text="@string/advanced_load_defaults"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/advanced_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0"
        android:background="@drawable/round_shape"
        android:fontFamily="@font/germania_one_regular"
        android:onClick="roomSettingsConfirmAdvanced"
        android:text="@string/advanced_confirm"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:background="@drawable/round_shape"
        android:fontFamily="@font/germania_one_regular"
        android:onClick="back"
        android:text="@string/back"
        android:textSize="25sp" />

</LinearLayout>