<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/veto_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/germania_one_regular"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        tools:text="USERNAME" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/germania_one_regular"
        android:gravity="center_horizontal"
        android:text="@string/veto_text"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/veto_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/germania_one_regular"
            android:text="@string/veto_accept"
            android:textSize="18sp" />

        <Button
            android:id="@+id/veto_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape"
            android:fontFamily="@font/germania_one_regular"
            android:text="@string/veto_decline"
            android:textSize="18sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/dialog_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:background="@drawable/round_shape"
        android:fontFamily="@font/germania_one_regular"
        android:text="@string/action_dialog_hide"
        android:textSize="18sp" />

</LinearLayout>