<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/pick_cards_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="@font/germania_one_regular"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/pick_cards_title"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pick_card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pick_cards_card_description" />

        <ImageView
            android:id="@+id/pick_card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pick_cards_card_description" />

        <ImageView
            android:id="@+id/pick_card3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pick_cards_card_description" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/pick_cards_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:background="@drawable/round_shape"
        android:fontFamily="@font/germania_one_regular"
        android:text="@string/pick_cards_confirm"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

    <Button
        android:id="@+id/dialog_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0"
        android:background="@drawable/round_shape"
        android:fontFamily="@font/germania_one_regular"
        android:text="@string/action_dialog_hide"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_weight="0" />

</LinearLayout>